// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:Collapse 1`] = `
<div>
  <div
    class="cxd-CollapseGroup"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper in"
        style="height: 0px;"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Collapse with disabled & panel nesting 1`] = `
<div>
  <div
    class="cxd-CollapseGroup"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <div
              class="cxd-CollapseGroup"
            >
              <div
                class="cxd-Collapse is-active"
              >
                <div
                  class="cxd-Collapse-header"
                >
                  <span
                    class="cxd-Collapse-arrow"
                  />
                  <span
                    class="cxd-TplField"
                  >
                    <span>
                      嵌套面板标题
                    </span>
                  </span>
                </div>
                <div
                  class="cxd-Collapse-contentWrapper"
                >
                  <div
                    class="cxd-Collapse-body"
                  >
                    <div
                      class="cxd-Collapse-content"
                    >
                      <span
                        class="cxd-TplField"
                      >
                        <span>
                          嵌套面板内容
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse cxd-Collapse--disabled lastOne"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-Collapse-arrow"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:Collapse with expandIcon & expandIconPosition & showArrow 1`] = `
<div>
  <div
    class="cxd-CollapseGroup icon-position-right"
  >
    <div
      class="cxd-Collapse is-active"
    >
      <div
        class="cxd-Collapse-header"
      >
        <i
          class="fa fa-caret-right cxd-Collapse-icon-tranform cxd-Collapse-icon-tranform"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题1
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse"
    >
      <div
        class="cxd-Collapse-header"
      >
        <i
          class="fa fa-caret-right cxd-Collapse-icon-tranform cxd-Collapse-icon-tranform"
        />
        <span
          class="cxd-TplField"
        >
          <span>
            标题2
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cxd-Collapse"
    >
      <div
        class="cxd-Collapse-header"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            标题3
          </span>
        </span>
      </div>
      <div
        class="cxd-Collapse-contentWrapper out"
      >
        <div
          class="cxd-Collapse-body"
        >
          <div
            class="cxd-Collapse-content"
          >
            <span
              class="cxd-TplField"
            >
              <span>
                这里是内容3
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
